# crypton-socks

./: .gitignore  CHANGELOG.md  README.md  crypton-socks.cabal  package.yaml  stack-ghc-9.10.2.yaml  stack-ghc-9.12.2.yaml  stack.yaml
.github/workflows/: tests.yml
example/: Example.hs
src/Network/: Socks5.hs
src/Network/Socks5/: Command.hs  Conf.hs  Lowlevel.hs  Parse.hs  Types.hs  Wire.hs
