Name:                crypton-socks
Version:             0.6.1
Synopsis:            Socks proxy (ver 5)
Description:         Socks proxy (version 5) implementation.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Mike Pilgrem <public@pilgrem.com>, Kazu Yamamoto <kazu@iij.ad.jp>
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       1.18
Homepage:            http://github.com/mpilgrem/socks5
extra-doc-files:     README.md, Example.hs, CHANGELOG.md

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , cereal >= 0.3.1
                   , network >= 2.6
                   , basement
  Exposed-modules:   Network.Socks5
                     Network.Socks5.Lowlevel
                     Network.Socks5.Types
  Other-modules:     Network.Socks5.Wire
                     Network.Socks5.Conf
                     Network.Socks5.Command
                     Network.Socks5.Parse
  ghc-options:       -Wall -fno-warn-missing-signatures -fwarn-tabs
  default-language:  Haskell2010

source-repository head
  type: git
  location: git://github.com/mpilgrem/socks5
